--- a/marketapp/listings/templates/FAQ/images.html
+++ b/marketapp/listings/templates/FAQ/images.html
@@ -15,6 +15,14 @@
       Select the tags you want for your image and people will be able to find your items
       using these tags when thay are included in item creation.  Once an image is uploaded,
       no other users will be able to see it until you include it in an item.</p>
+    <h1>How to Edit/Delete Images</h1>
+    <p>In your list of images that you've uploaded, under each image, there will be
+      two buttons, "Edit" and "Delete".  Clicking on the Edit button will take you to the form
+      to edit your image where you can change the name and add tags to your image.
+      Clicking on Delete button will take you to a confirmation page where you can confirm if
+      you want to delete the image or not.  When deleting an image, any items that contain that image
+      will also be deleted if they have no other images, which will result in listings containing
+      that item to be deleted as well.</p>
   </div>
   <div class="faq-content col-md-10">
     <h1>FAQs for Images</h1>
