--- a/marketapp/listings/templates/FAQ/items.html
+++ b/marketapp/listings/templates/FAQ/items.html
@@ -16,6 +16,13 @@
     optional and not needed, but can be useful for other users to know what the item is.
     After creating your item, other users will not be able to see it until you add it to a
     listing.</p>
+  <h1>How to Edit/Delete Items</h1>
+  <p>In your list of items that you've created, under each image for an item, there will be
+    two buttons, "Edit" and "Delete".  Clicking on the Edit button will take you to the form
+    to edit your item where you can change the name and description and add images to you item.
+    Clicking on Delete button will take you to a confirmation page where you can confirm if
+    you want to delete the item or not.  Be warned though, if you delete an item, any listing
+    that contains that item will also be deleted as well.</p>
 </div>
 <div class="faq-content col-md-10">
   <h1>FAQs for Items</h1>
