--- a/marketapp/listings/templates/FAQ/listings.html
+++ b/marketapp/listings/templates/FAQ/listings.html
@@ -38,7 +38,7 @@
     take you to a confirmation page where can confirm if you want to delete the listing or not.  Be
     careful, once you delete a listing, it can not be undone, and you will have to remake the listing again
     afterwards if you want to list the items that were included again.</p>
-  <h1>How to Place an Offer</h1>
+  <h1>How to Place/Retract an Offer</h1>
   <p>To place an offer on a listing that you are interested in, you will first need to view
     the listing's detail page by clicking on a listing on the offer listings page.  This page
     can be found in the navigation bar by hovering over "All Listings" and clicking on "Offers".</p>
@@ -48,24 +48,33 @@
     your offer.  If a listing is open to money offers, you may offer only money or both money and items.
     If a listing is not open to money offers, you must offer at least one item.  Once you have finished
     selecting items and entered a money amount if you desired to, click on "Make Offer" to create the offer.</p>
-    <h1>How to View/Accept an Offer</h1>
-    <p>To accept an offer on one of your listings, navigate to the detail page of your desired listing.  You
-      can access a list of your listings by going to the navigation bar in the top right, hover over "My Listings"
-      and selecting "Offers".  Once on this page, click on the image or name of the listing you're interested in
-      to go to its detail page.</p>
-    <p>On the listing detail page, scroll to the bottom of the page and you will see a list of all the offers
-      users have made on your listing.  To see more details for each offer, click on the name of the offer to
-      view the detail page.  This will give you more information on the items that were offered, if the user included
-      any.  You can click on an item in an offer to view even more details about the item on its detail page, and you
-      can click on items in both the list of offers in the listing detail page or on the offer detail page.</p>
-    <p>When you are ready to accept an offer, in the top right corner of each listing you'll a button that says "Accept Offer".
-      Clicking on this will create a popup asking you to confirm if you do want to accept the listing.  If you are sure,
-      click "Yes", else click "No" and you may choose another offer if you wish.  Once an offer is accepted,
-      all other offers except for the selected offer will be deleted so make sure you are 100% sure of the offer
-      you accept.  Once a listing has been completed, it will not show up in results for other users, and will only
-      display the offer you accepted.</p>
-    <p>Make sure to acept an offer that you're interested in before a listing ends.  Once the listing has ended, you will
-      not be able to accept any offers and will need to relist it in order to reopen it to offers.</p>
+  <p>You may also retract your offer if you choose to do so.  To perform this, go to your list and offers
+    and click on the offer you want to retract.  On the offer detail page, scroll to the bottom and there
+    will be a button that says "Retract".  Clicking on it will take you to a confirmation page where you
+    can confirm if you want to retract the offer or not.  If you do retract the offer, the listing owner
+    will not be able to accept the offer.
+  <h1>How to View/Accept/Reject an Offer</h1>
+  <p>To accept an offer on one of your listings, navigate to the detail page of your desired listing.  You
+    can access a list of your listings by going to the navigation bar in the top right, hover over "My Listings"
+    and selecting "Offers".  Once on this page, click on the image or name of the listing you're interested in
+    to go to its detail page.</p>
+  <p>On the listing detail page, scroll to the bottom of the page and you will see a list of all the offers
+    users have made on your listing.  To see more details for each offer, click on the name of the offer to
+    view the detail page.  This will give you more information on the items that were offered, if the user included
+    any.  You can click on an item in an offer to view even more details about the item on its detail page, and you
+    can click on items in both the list of offers in the listing detail page or on the offer detail page.</p>
+  <p>When you are ready to accept an offer, in the top right corner of each listing you'll a button that says "Accept Offer".
+    Clicking on this will create a popup asking you to confirm if you do want to accept the listing.  If you are sure,
+    click "Yes", else click "No" and you may choose another offer if you wish.  Once an offer is accepted,
+    all other offers except for the selected offer will be deleted so make sure you are 100% sure of the offer
+    you accept.  Once a listing has been completed, it will not show up in results for other users, and will only
+    display the offer you accepted.</p>
+  <p>Make sure to acept an offer that you're interested in before a listing ends.  Once the listing has ended, you will
+    not be able to accept any offers and will need to relist it in order to reopen it to offers.</p>
+  <p>If you are not interested in any of the current offers, you may also reject them.  Underneath the accept button
+    for each offer is a "Decline" button.  Clicking on this will take you to a confirmation page where you can
+    confirm that you want to reject the offer.  Once rejected you cannot accept the offer unless the user offers the
+    items again.</p>
   <h1>How to Create an Auction Listing</h1>
   <p>In order to create an listing to auction items, hover over "My Listings" in the top right
     navigation bar and in the dropdown select "Auctions".  On this page, you will see all
