--- a/marketapp/listings/templates/images/images.html
+++ b/marketapp/listings/templates/images/images.html
@@ -1,24 +1,33 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <div class="container-fluid">
-    <div class="row content-header-row">
-      <div class="col-lg-4">
+  <div class="container-fluid col-lg-10 center-block listings-container">
+    <div class="center-block" style="text-align: center;">
+      <div>
         <h1>My Images</h1>
       </div>
-      <div class="col-lg-8 add-button">
+      <div class="add-button">
         <a href="{% url 'images-add' %}"><div class="btn btn-green">Add Image</div></a>
       </div>
     </div>
   </div>
   {% if images %}
-  <ul>
+  <div class="container-fluid col-lg-8 center-block" style="margin-top: 20px; margin-bottom: 20px;">
     {% for image in images %}
-      <li>
-        <a href="{{ image.get_absolute_url }}">{{ image.name }}</a>
-      </li>
+      <a href="{{ image.get_absolute_url }}">
+        <div class="image-list-display">
+          <div class="image-image"><img src="{{ image.image.url }}"
+                style="width: 175px; height: 175px; border: 2px solid black"></img>
+          </div>
+          <div class="image-list-image-name"><h5>{{ image.name|truncatechars:15 }}</h5></div>
+          <div class="center-block" style="text-align: center;">
+            <a class="btn btn-blue image-button" href="{% url 'edit-image' pk=image.pk %}">EDIT</a>
+            <a class="btn btn-red image-button" href="{% url 'delete-image' pk=image.pk %}">DELETE</a>
+          </div>
+        </div>
+      </a>
     {% endfor %}
-  </ul>
+  </div>
   {% else %}
     <p>You don't have any images uploaded yet.</p>
   {% endif %}
