--- a/marketapp/listings/static/css/styles.css
+++ b/marketapp/listings/static/css/styles.css
@@ -396,3 +396,11 @@ a:hover {
   padding: 0px;
   font-size: 14px;
 }
+
+.bids-container {
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 30px;
+  padding-top: 10px;
+  border-top: 1px solid grey;
+}
