--- a/marketapp/listings/templates/base_generic.html
+++ b/marketapp/listings/templates/base_generic.html
@@ -21,7 +21,7 @@
             <div class="dropdown">
               <div class="site-nav-url dropbtn" style="margin-left: -4px;">All Listings</div>
               <div class="dropdown-content mystuff-dropdown-all-listings">
-                <a class="site-nav-url" style="margin-left: -4px;" href="#">Offers</a>
+                <a class="site-nav-url" style="margin-left: -4px;" href="{% url 'all-offer-listings' %}">Offers</a>
                 <a class="site-nav-url" style="margin-left: -4px;" href="#">Auctions</a>
               </div>
             </div>
