--- a/marketapp/listings/templates/listings/all_auction_listings.html
+++ b/marketapp/listings/templates/listings/all_auction_listings.html
@@ -4,13 +4,13 @@
   <div class="container-fluid col-lg-10 center-block listings-container">
     <div class="center-block" style="text-align: center;">
       <div>
-        <h1>All Active Offer Listings</h1>
+        <h1>All Active Auction Listings</h1>
       </div>
     </div>
   </div>
-  {% if offerlistings %}
+  {% if auctionlistings %}
     <div class="center-block col-lg-10">
-    {% for listing in offerlistings %}
+    {% for listing in auctionlistings %}
       {% if listing.endingSoon %}
         <div class="all-listing-object-ending-soon">
           {% with listing.items.all|first as item %}
@@ -33,15 +33,23 @@
                   Ending Soon!
                 </div>
               </div>
-              {% if listing.openToMoneyOffers %}
-                <div class="listing-prices">
-                  {% if listing.maxRange > 0.00 %}
-                    Price Range: ${{ listing.minRange }} - ${{ listing.maxRange }}
-                  {% else %}
-                    Minimum Price: ${{ listing.minRange }}
+              <div class="listing-prices">
+                {% if listing.bids.count > 0 %}
+                  {% for bid in listing.bids.all %}
+                    {% if bid.winningBid == True %}
+                      Current Bid: ${{ bid.amount }} | Minimum Increment: ${{ listing.minimumIncrement }}<br>
+                    {% endif %}
+                  {% endfor %}
+                  {% if listing.autobuy != 0.00 %}
+                    Autobuy: ${{ listing.autobuy }}
                   {% endif %}
-                </div>
-              {% endif %}
+                {% else %}
+                  Starting Bid: ${{ listing.startingBid }} | Minimum Increment: ${{ listing.minimumIncrement }}<br>
+                  {% if listing.autobuy != 0.00 %}
+                    Autobuy: ${{ listing.autobuy }}
+                  {% endif %}
+                {% endif %}
+              </div>
               <div class="listing-date">Ends: {{ listing.endTime }}</div>
             </div>
             <div class="listing-desc">
@@ -68,15 +76,23 @@
                    Owned By: <a href="">{{ listing.owner }}</a>
                  </div>
               </div>
-              {% if listing.openToMoneyOffers %}
-                <div class="listing-prices">
-                  {% if listing.maxRange > 0.00 %}
-                    Price Range: ${{ listing.minRange }} - ${{ listing.maxRange }}
-                  {% else %}
-                    Minimum Price: ${{ listing.minRange }}
+              <div class="listing-prices">
+                {% if listing.bids.count > 0 %}
+                  {% for bid in listing.bids.all %}
+                    {% if bid.winningBid == True %}
+                      Current Bid: ${{ bid.amount }} | Minimum Increment: ${{ listing.minimumIncrement }}<br>
+                    {% endif %}
+                  {% endfor %}
+                  {% if listing.autobuy != 0.00 %}
+                    Autobuy: ${{ listing.autobuy }}
                   {% endif %}
-                </div>
-              {% endif %}
+                {% else %}
+                  Starting Bid: ${{ listing.startingBid }} | Minimum Increment: ${{ listing.minimumIncrement }}<br>
+                  {% if listing.autobuy != 0.00 %}
+                    Autobuy: ${{ listing.autobuy }}
+                  {% endif %}
+                {% endif %}
+              </div>
               <div class="listing-date">Ends: {{ listing.endTime }}</div>
             </div>
             <div class="listing-desc">
