--- a/marketapp/listings/templates/listings/offer_listings.html
+++ b/marketapp/listings/templates/listings/offer_listings.html
@@ -124,6 +124,6 @@
       </div>
     </div>
   {% else %}
-    <p style="text-align: center;">You don't have any offer listings yet.</p>
+    <p style="text-align: center;">You don't have any offer listings currently.</p>
   {% endif %}
 {% endblock %}
