--- a/marketapp/listings/templates/base_generic.html
+++ b/marketapp/listings/templates/base_generic.html
@@ -30,6 +30,7 @@
               <div class="dropdown-content mystuff-dropdown">
                 <a class="site-nav-url" style="margin-left: -3px;" href="{% url 'images' %}">Images</a>
                 <a class="site-nav-url" style="margin-left: -3px;" href="{% url 'items' %}">Items</a>
+                <a class="site-nav-url" style="margin-left: -3px;" href="{% url 'my-offers' %}">Offers</a>
               </div>
             </div>
             <div class="dropdown">
