--- a/marketapp/listings/templates/base_generic.html
+++ b/marketapp/listings/templates/base_generic.html
@@ -31,6 +31,7 @@
                 <a class="site-nav-url" style="margin-left: -3px;" href="{% url 'images' %}">Images</a>
                 <a class="site-nav-url" style="margin-left: -3px;" href="{% url 'items' %}">Items</a>
                 <a class="site-nav-url" style="margin-left: -3px;" href="{% url 'my-offers' %}">Offers</a>
+                <a class="site-nav-url" style="margin-left: -3px;" href="{% url 'my-bids' %}">Bids</a>
               </div>
             </div>
             <div class="dropdown">
