Added documentation for editing an offer

--- a/marketapp/listings/templates/FAQ/listings.html
+++ b/marketapp/listings/templates/FAQ/listings.html
@@ -38,7 +38,7 @@
     take you to a confirmation page where can confirm if you want to delete the listing or not.  Be
     careful, once you delete a listing, it can not be undone, and you will have to remake the listing again
     afterwards if you want to list the items that were included again.</p>
-  <h1>How to Place/Retract an Offer</h1>
+  <h1>How to Place/Edit/Retract an Offer</h1>
   <p>To place an offer on a listing that you are interested in, you will first need to view
     the listing's detail page by clicking on a listing on the offer listings page.  This page
     can be found in the navigation bar by hovering over "All Listings" and clicking on "Offers".</p>
@@ -48,6 +48,12 @@
     your offer.  If a listing is open to money offers, you may offer only money or both money and items.
     If a listing is not open to money offers, you must offer at least one item.  Once you have finished
     selecting items and entered a money amount if you desired to, click on "Make Offer" to create the offer.</p>
+  <p>If you need to, you can edit your offer later on as long as the listing hasn't ended or been completed.
+    To do so, go to the navigation bar in the top right of the page, hover over "My Stuff" and in the dropdown
+    select "Offers".  On the following page, you'll see a list of all offers you have made for currently
+    active listings, and each offer will have two buttons in their container, "Edit" and "Retract".  Clicking
+    on the "Edit" button will take you to the form where you can change the items contained in the offer and
+    the amount of money included in the offer.</p>
   <p>You may also retract your offer if you choose to do so.  To perform this, go to your list and offers
     and click on the offer you want to retract.  On the offer detail page, scroll to the bottom and there
     will be a button that says "Retract".  Clicking on it will take you to a confirmation page where you
