Wrote tests for and implemented Detail view for events

--- a/marketapp/listings/static/css/styles.css
+++ b/marketapp/listings/static/css/styles.css
@@ -501,3 +501,21 @@ a:hover {
 .event-details {
   margin-top: 10px;
 }
+
+.event-context {
+  margin-top: 50px;
+}
+
+.event-header {
+  background: #7ca4e6;
+  border: 1px dashed #536d99;
+  border-radius: 25px;
+  padding: 15px;
+}
+
+.participants-container {
+  text-align: center;
+  border-top: 1px solid grey;
+  margin-top: 50px;
+  padding-top: 25px;
+}
