--- a/marketapp/listings/templates/events/events.html
+++ b/marketapp/listings/templates/events/events.html
@@ -17,7 +17,7 @@
         {% if event.host == request.user %}
           <div class="event-owner-container">
             <div class="col-lg-12">
-              <a href=""><h2 class="event-title">{{ event.title }}</h2></a>
+              <a href="{{ event.get_absolute_url }}"><h2 class="event-title">{{ event.title }}</h2></a>
               <div class="event-buttons">
                 <a href=""><span class="btn btn-blue edit-btn">RELIST</span></a>
                 <a href=""><span class="btn btn-red delete-btn">DELETE</span></a>
@@ -31,7 +31,7 @@
         {% else %}
           <div class="event-participant-container">
             <div class="col-lg-12">
-              <a href=""><h2 class="event-title">{{ event.title }}</h2></a>
+              <a href="{{ event.get_absolute_url }}"><h2 class="event-title">{{ event.title }}</h2></a>
               <div class="event-buttons">
                 <a href=""><span class="btn btn-red delete-btn">DECLINE</span></a>
               </div>
