--- a/marketapp/listings/templates/FAQ/documents.html
+++ b/marketapp/listings/templates/FAQ/documents.html
@@ -8,5 +8,6 @@
     <li><a href="{% url 'faq-images' %}">Images Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-items' %}">Items Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-listings' %}">Listings Documentation/FAQ</a></li>
+    <li><a href="{% url 'faq-events' %}">Events Documentation/FAQ</a></li>
   </ul>
 {% endblock %}
