Added documentation for editing and deleting events

--- a/marketapp/listings/templates/FAQ/events.html
+++ b/marketapp/listings/templates/FAQ/events.html
@@ -5,7 +5,7 @@
   <div class="how-to-content col-md-10">
     <h1>How to Create an Event</h1>
     <p>In order to create an event that you can invite other users to, hover over "Events"
-      in the top right and click on it.  On this page, you will see all the events that you
+      in the top right navigation bar and click on it.  On this page, you will see all the events that you
       have created and events that you have accepted an invitation to.  In the header on this
       page, underneath "My Events", there will be a button that says "Create Event".  Clicking
       on the button will take you to the form to create an event.</p>
@@ -14,6 +14,20 @@
       for the event, it should be submitted in 'YY-MM-DD' format or 'YY-MM-DD HH:MM' format.  Once
       you have filled in all the fields for your event, click on "Create" at the bottom of the
       form to finish creating your event.</p>
+    <h1>How to Edit/Delete an Event</h1>
+    <p>If you decide that you need to edit an event, hover over "Events" in the top right
+      navigation bar and click on it.  In the list for all your current events, for each event
+      that you are hosting, there will be a button that says "EDIT" in the top right of the
+      container.  Clicking on it will take you to the edit form for your event.  When editing
+      your event, make sure that all the fields remain filled out, otherwise you will not be
+      able to update the event.  Once you finish editing your event, click on the "Update"
+      button to confirm the changes.</p>
+    <p>Deleting your event is very easy.  On the same page where you can view all of your current
+      events, for each event that you are hosting, there will be a "Delete" button in the
+      top right of the container.  Clicking on it will take you to confirmation page where you
+      casn confirm if you want to delete the event or not.  Be sure that you want to delete your
+      event, because once deleted, it cannot be recovered and you will have to remake it if
+      you decide to host it again.</p>
   </div>
   <div class="faq-content col-md-10">
     <h1>FAQs for Events</h1>
