--- a/marketapp/listings/templates/events/events.html
+++ b/marketapp/listings/templates/events/events.html
@@ -19,7 +19,7 @@
             <div class="col-lg-12">
               <a href="{{ event.get_absolute_url }}"><h2 class="event-title">{{ event.title }}</h2></a>
               <div class="event-buttons">
-                <a href=""><span class="btn btn-green event-invite-btn">INVITE</span></a>
+                <a href="{% url 'create-invitations' pk=event.pk %}"><span class="btn btn-green event-invite-btn">INVITE</span></a>
                 <a href="{% url 'edit-event' pk=event.pk %}"><span class="btn btn-blue event-edit-btn">EDIT</span></a>
                 <a href="{% url 'delete-event' pk=event.pk %}"><span class="btn btn-red event-delete-btn">DELETE</span></a>
               </div>
